force-app/main/default/objects/breg_Agent_Search_Result__c/breg_Agent_Search_Result__c.object-meta.xml
<CustomObject>
    <label>Agent Search Result</label>
    <nameField>
        <displayFormat>ASR-{00000000}</displayFormat>
        <label>Agent Search Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Search Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>