force-app/main/default/objects/breg_Agent_Search_Result__c/fields/breg_Agent_Search_List__c.field-meta.xml
<CustomField>
    <fullName>breg_Agent_Search_List__c</fullName>
    <label>Agent Search List</label>
    <referenceTo>breg_Agent_Search_List__c</referenceTo>
    <relationshipLabel>Agent Search Results</relationshipLabel>
    <relationshipName>Agent_Search_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>