force-app/main/default/objects/breg_Agent_Search_Result__c/fields/breg_Download_Link__c.field-meta.xml
<CustomField>
    <fullName>breg_Download_Link__c</fullName>
    <label>Download Link</label>
    <type>Url</type>
</CustomField>