force-app/main/default/objects/breg_Agent_Search_Result__c/fields/breg_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>